  the even-rounding rule.
- New macro mpfr_round_nearest_away to add partial emulation of the
  rounding to nearest-away (as defined in IEEE 754-2008).
- New functions mpfr_nrandom and mpfr_erandom to generate random numbers
  following normal and exponential distributions respectively.
- New functions mpfr_fmma and mpfr_fmms to compute a*b+c*d and a*b-c*d.
- New function mpfr_log_ui to compute the logarithm of an integer.
- The behavior of the mpfr_set_exp function changed, as it could easily
  yield undefined behavior in some cases (this modifies both the API and
  the ABI).
- Function mpfr_grandom is deprecated and will be removed in a future release.
- Complete rewrite of function mpfr_sum, which now works in all cases (the
  old one could take all the memory and/or crash with inputs of different
  magnitudes in case of huge cancellation or table maker's dilemma). The
  sign of an exact zero result is now specified, and the return value is
  now the usual ternary value.
- Internally, improved caching: a minimum of 10% increase of the precision
  is guaranteed to avoid too many recomputations; added mpz_t caching.
  [TODO: add shared caches; note that the ABI can be changed.]
- Added configure option --enable-assert=none to avoid checking any assertion.
- The --enable-decimal-float configure option no longer requires
  --with-gmp-build.
- Updated tuning parameters.
- Better support for Automake 1.13+ (now used to generate the tarball).
- Dropped K&R C compatibility.
- Improved MPFR manual.
- New MPFRbench program (see the tools/bench directory).
- Speedup in the mpfr_const_euler function (contributed by Fredrik Johansson),
  in the computation of Bernoulli numbers (used in mpfr_gamma, mpfr_li2,
  mpfr_digamma, mpfr_lngamma and mpfr_lgamma), in mpfr_div, in mpfr_fma
  and mpfr_fms.
- Bug fixes. In particular: a speed improvement when the --enable-assert
  or --enable-assert=full configure option is used with GCC; mpfr_get_str
  now sets the NaN flag on NaN input.