@@ -3133,13 +3133,39 @@ According to \cite[Section 2.6]{Pugh04}, the relative error is bounded by
 $a^{-1/2} (2\pi)^{-a-1/2}$ for $a \ge 3$ and $\Re(z) \ge 0$.
 See also \cite{Smith01}.
 
+\subsection{The incomplete gamma function}
+
+The incomplete gamma function is defined as:
+\[ \Gamma(a,x) = \int_x^{\infty} t^{a-1} \exp(-t) \, {\rm d}t
+               = \Gamma(a) - \gamma(a,x), \]
+with the complementary incomplete gamma function $\gamma(a,x)$ defined by:
+\[ \gamma(a,x) = \int_0^x t^{a-1} \exp(-t) \, {\rm d}t, \]
+and satisfying the two Taylor expansions:
+\[
+\gamma(a,x) = x^a \sum_{k=0}^{\infty} \frac{(-x)^k}{(a+k) k!}
+            = x^a \exp(-x) \sum_{k=0}^{\infty} \frac{x^k}{a (a+1) \cdots
+                  (a+k)}.
+\]
+We use the second expansion, and we stop adding terms of the series when the
+current term is less than one ulp of the current sum, and $|x/(a+k)| < 1/2$.
+The last condition ensures that the tail of the series is less than twice the
+current term, thus the approximated sum $s$ satisfies $s = S (1 + \theta)^3$
+with $S$ the exact sum, and $|\theta| < 2^{-w}$ with $w$ the working
+precision. If the series was computed up to index $k$, the error on
+$\gamma(a,x)$ is less than $4k+14$ ulps.
+Subtracting from $\Gamma(a)$ can yield a huge cancellation: we take into
+account the exact error bound, which is deduced from the different exponents
+involved. Further details can be found in the source code.
+
 \subsection{The Riemann Zeta function}
 
 The algorithm for the Riemann Zeta function is due to Jean-Luc R\'emy
 and Sapphorain P\'etermann \cite{PeRe06,PeRe07}. For $s < 1/2$ we use the
 functional equation
 \[ \zeta(s) = 2^s \pi^{s-1} \sin\left(\frac{\pi s}{2}\right) \Gamma(1-s)
-   \zeta(1-s). \]
+   \zeta(1-s) \]
+(in that case, one should take care of cancellation when $\sin(\pi s/2)$ is
+small, i.e., when $s$ is near an even negative integer).
 For $s \geq 1/2$ we use the Euler-MacLaurin summation formula, applied
 to the real function $f(x) = x^{-s}$ for $s > 1$:
 \[ \zeta(s) = \sum_{k=1}^{N-1} \frac{1}{k^s} + \frac{1}{2N^s}
@@ -3514,10 +3540,10 @@ If we first approximate $\chi = z - (n/2 + 1/4) \pi$ with working precision
 $w$, and then approximate $\cos \chi$ and $\sin \chi$, there will be a huge
 relative error if $z > 2^w$. Instead, we use the fact that for $n$ even,
 \[ P(n,z) \cos \chi - Q(n,z) \sin \chi = \frac{1}{\sqrt{2}} (-1)^{n/2}
-   [P (\sin z + \cos z) + Q (\cos z - \sin z)], \]
+   [P(n,z) (\sin z + \cos z) + Q(n,z) (\cos z - \sin z)], \]
 and for $n$ odd,
 \[ P(n,z) \cos \chi - Q(n,z) \sin \chi = \frac{1}{\sqrt{2}} (-1)^{(n-1)/2}
-   [P (\sin z - \cos z) + Q (\cos z + \sin z)], \]
+   [P(n,z) (\sin z - \cos z) + Q(n,z) (\cos z + \sin z)], \]
 where $\cos z$ and $\sin z$ are computed accurately with
 \texttt{mpfr\_sin\_cos}, which uses in turn \texttt{mpfr\_remainder}.
 
